--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       >
         <div class="flex items-center gap-3">
           <img
-            src=".assets/ChatGPT Image Aug 6, 2025, 01_46_48 PM.png"
+            src="assets/ChatGPT Image Aug 6, 2025, 01_46_48 PM.png"
             alt="Scoop & Go Logo"
             class="w-14 h-14 object-contain"
           />
